feat: added mainTestSuite to run all tests at once